fj/src/test/resources/scope-paper/inh-cyclic3.expected
src/test/resources/scope-paper/inh-cyclic3.fj:2:1:error: superclass cycle from A
class A extends B {
^
src/test/resources/scope-paper/inh-cyclic3.fj:5:1:error: superclass cycle from B
class B extends C {
^
src/test/resources/scope-paper/inh-cyclic3.fj:8:1:error: superclass cycle from C
class C extends A {
^
