fj/src/test/resources/scope-paper/inh-cyclic3.fj
// inheritance/cyclic.spt:two-step inheritance cycle
class A extends B {
  A() { super(); }
}
class B extends C {
  B() { super(); }
}
class C extends A {
  C() { super(); }
}
